testsuite/gnatprove/tests/247__container_aggregates/test.out
test.adb:34:13: error: container aggregate whose type does not have a "Container_Aggregates" annotation is not allowed in SPARK
test.adb:34:13: error: violation of aspect SPARK_Mode at line 1
gnatprove: error during flow analysis and proof
